{
  "translation": {
    "label": {
      "email": "Email",
      "password": "Password",
      "name": "Full name",
      "pixValue": "Enter the pix key"
    },

    "option": {
      "iProducer": "I'm a producer",
      "iConsumer": "I'm a consumer",
      "rememberMe": "Remember my password",
      "terms": "I agree with the Privacy Policy and Terms of Use",
      "smallBasket": "Small",
      "mediumBasket": "Medium",
      "largeBasket": "Large",
      "typePixCPF": "CPF",
      "typePixPhone": "Phone",
      "typePixEmail": "E-mail",
      "typePixRandom": "Random key",
      "daysPerDeliverWeekly": "Weekly",
      "daysPerDeliverFortnightly": "Fortnightly",
      "typeDeliveryCollectPoint": "Pick up at the collection point",
      "typeDeliveryHome": "Delivery (to be arranged with producer)"
    },

    "detailsOption": {
      "smallBasket": "1 spice, 2 vegetables, 2 leaves, 3 fruits",
      "mediumBasket": "2 spices, 3 vegetables, 3 leaves, 3 fruits\nand 1 processed",
      "largeBasket": "3 spices, 4 vegetables, 4 leaves, 4 fruits\nand 1 processed"
    },

    "button": {
      "login": "Login",
      "recoveryPassword": "Recovery password",
      "goToSite": "Go to site",
      "signUp": "Sign up",
      "signIn": "Sign In",
      "register": "Register",
      "start": "Start",
      "done": "Done",
      "prev": "Previous",
      "skip": "Skip",
      "next": "Next",
      "confirm": "Confirm",
      "myBaskets": "My Baskets",
      "myEarnings": "See my earnings",
      "registerPix": "Register pix key",
      "configPix": "Configure pix key",
      "extract": "See extract",
      "myInfo": "My Info",
      "contactProducer": "Contact producer",
      "logout": "Logout",
      "donateAgain": "Donate Again",
      "completePurchase": "Complete purchase",
      "goToMessages": "Go to messages",
      "goToDonations": "Go to donations",
      "cancel": "Cancel"
    },

    "error": {
      "login": "Incorrect email or password",
      "required": "Field required",
      "validEmail": "Enter a valid email",
      "validPassword": "The password must contain at least 6 digits",
      "terms": "You need to accept the terms of use",
      "minProduct": "Please select at least one product",
      "minCoins": "Minimum of 1 coin"
    },

    "modal": {
      "titleConfirmProducerBasket": "You have added the baskets to your list of supplied products.",
      "titleRegisterPix": "Your PIX key has been successfully registered!",
      "titleInfoAboutBasket": "You removed {{counter, number}} item from your basket!",
      "subTitleInfoAboutBasket": "This item will be converted into Horticoin currency, and you will be able to donate it to a partner institution that works in the fight against hunger.",
      "titleCompletePurchase": "Your order has been confirmed and will be prepared!",
      "subTileCompletePurchase": "To line up basket delivery or collection, go to messages and arrange all details directly with the producer."
    },

    "cardOng": {
      "one": "NGO Comida na mesa",
      "two": "NGO Criança sem fome"
    },

    "loading": "Loading...",

    "bottomTab": {
      "home": "Home",
      "myBaskets": "My Baskets",
      "donations": "Donations",
      "profile": "Profile",
      "financial": "Financial"
    },

    "text": {
      "componentInfo": {
        "title": "If you are an institution that works in the fight against hunger and want to request your registration, visit our website and learn more."
      },
  
      "componentCardFood": {
        "seeMore": "See More"
      },
  
      "componentHeader": {
        "welcome": "Welcome {{name}}!"
      },
  
      "componentModalDonation": {
        "titleModalDonation": "You chose to donate to the NGO Criança sem fome!",
        "subTitleModalDonation": "You have 0 coins",
        "textModalDonation": "How many coins do you want to donate?"
      },

      "screenLogin": {
        "doNotHaveAnAccount?": "Do not have an account ?",
        "forgotYourPassword?": "Forgot your password ?"
      },
  
      "screenRegister": {
        "createAnAccount": "Create an account",
        "enterYourDetails": "Enter your details to create a new account:",
        "alreadyHaveAnAccount?": "Already have an account?"
      },
  
      "screenConfirmRegister": {
        "registrationSuccessfully": "Registration successfully completed!",
        "validateYourRegistration": "Validate your registration and enjoy the entire experience of Cestar and help fight hunger."
      },
  
      "screenOnboarding": {
        "titleOnboardingOne": "Take hunger out of the way",
        "textOnboardingOne": "Food is a basic right and its sharing is essential for those who are hungry. Through the monthly subscription, you guarantee healthy democratized food for your family and also allow the same consumption for a family in vulnerability.",
        "titleOnboardingTwo": "Present family farming",
        "textOnboardingTwo": "Connect with family farmers in your region. You strengthen the production of small local producers and receive fresh food grown with great care and care.",
        "titleOnboardingThree": "Healthy eating at your fingertips Healthy eating at your fingertips",
        "textOnboardingThree": "Here you will find food totally free of pesticides and close to you!"
      },

      "screenHomeConsumer": {
        "titleBanner": "Make your\n subscription!",
        "subTitleBanner": "Fresh products from\n local producers every\n week on your table",
        "title": "Help us fight hunger",
        "subTitle": "See below the institutions and projects registered in our network and help us reach the goal of the month by donating your coins that will be converted into food."
      },

      "screenHomeProducer": {
        "titleSectionOne": "My Baskets",
        "note": "Configure what types and sizes of food baskets you want to provide.",
        "titleSectionTwo": "My finances"
      },

      "screenHomeMyBasketsProducer": {
        "titleHeader": "My Baskets",
        "instructions": "Choose below what size basket you want to provide, and see what types of food are in each.",
        "note": "Note: You can select more than one size"
      },

      "screenHomeFinancialProducer": {
        "headerTitle": "Financial",
        "balanceTitle": "Balance available",
        "sectionTitle": "Registered pix keys"
      },

      "screenRegisterPixFinancialProducer": {
        "headerTitle": "Pix keys",
        "instructionOne": "Inform which type of pix key you want to register to receive your sales:",
        "instructionTwo": "Enter the pix key to be registered in the field below:"
      },

      "screenProfile": {
        "headerTitle": "Profile"
      },

      "homeDonationConsumer": {
        "headerTitle": "Donations",
        "titleCoins": "Balance of Horticoins coins generated from your basket",
        "titleSection": "Help fight hunger",
        "infoSection": "See below the institutions and projects registered in our network and help us reach the goal of the month by donating your Horticoins that will be converted into food.",
        "info": "To learn more about the projects and institutions we are helping, visit our website."
      },

      "confirmDonation": {
        "headerTitle": "Subscription",
        "title": "Donation made successfully!",
        "message": "You have just helped an institution that works in the fight against hunger, donating Horticoins that will be converted into the purchase of food directly with our local partner producers."
      },

      "basketSignupPlanConsumer": {
        "headerTitle": "Subscription",
        "title": "Let's set up your plan",
        "instructionOne": "Choose how often you receive or withdraw your basket:",
        "instructionTwo": "Choose which size you want for your food basket:",
        "note": "Note: The amount informed above is charged according to the chosen frequency."
      },

      "basketSignupFoodConsumer": {
        "headerTitle": "Subscription",
        "infoBasket": "You have chosen the {{size}} size basket ({{quantity}} items), select how many servings of each category you want to receive.",
        "warning": "Important!",
        "warningText": "Each unit of food taken from your basket is converted into Horticoins, our virtual currency that is used by partner institutions to purchase food and help fight hunger!"
      },

      "basketSignupPaymentConsumer": {
        "headerTitle": "Subscription",
        "titleSectionOne": "Delivery",
        "instructionSectionOne": "Choose whether you prefer to pick up your basket at one of our collection points, or receive it at home for an extra fee.",
        "checkoutTitle": "Subtotal",
        "checkoutTotal": "Total",
        "checkoutDescriptionBasket": "01 basket {{size}}",
        "checkoutPriceBasket": "R$ {{price}}",
        "checkoutTotalPriceBasket": "R$ {{price}}",
        "titleSectionTwo": "Payment",
        "instructionSectionTwo": "Make the payment to the pix key informed below and then send the proof of payment to the producer via whatsapp."
      }
    }
  }
}