...
    }
  }, [isLoading, canGoNext, navigate]);

  return (
    <StyledContainerScroll
      showsVerticalScrollIndicator={false}
      testID="basket-signup-plan-consumer-screen">
      <Header
        title={t('text.basketSignupPlanConsumer.headerTitle')}
        welcome={false}
      />
      <StyledContent>
        <StyledTitle>{t('text.basketSignupPlanConsumer.title')}</StyledTitle>
...
          type="withBox"
          error={isSubmitted ? errors.size?.message : ''}
        />
        <StyledText>{t('text.basketSignupPlanConsumer.note')}</StyledText>

        <StyledSubmitButton
          testID="submit-button-plan"
          title={t('button.next')}
          onPress={handleSubmit(onSubmit)}
          loading={isLoading}
        />
      </StyledContent>
    </StyledContainerScroll>
...
