...
    }
  }, [isLoading, canGoNext, navigate]);

  return (
    <StyledContainerScroll
      showsVerticalScrollIndicator={false}
      testID="basket-signup-food-consumer-screen">
      <Header
        title={t('text.basketSignupFoodConsumer.headerTitle')}
        welcome={false}
      />
      <StyledContent>
        <StyledText>
...
            control={control}
            maxQuantity={food.quantity}
          />
        ))}

        <StyledSubmitButton
          testID="submit-button-food"
          title={t('button.next')}
          onPress={handleSubmit(onSubmit)}
        />

        {isVisibleModal && (
          <Modal
...
