...
    // eslint-disable-next-line react-hooks/exhaustive-deps
  }, []);

  return (
    <StyledContainer testID="login-screen">
      <StyledContainerScroll showsVerticalScrollIndicator={false}>
        <StyledLogo testID="logo" />
        <StyledContainerForm>
          <InputForm
            control={control}
            name="phoneOrEmail"
            label={t('label.email')}
            error={
...
          />
        </StyledContainerForm>
        <StyledButtonSubmit
          onPress={handleSubmit(onSubmit)}
          loading={isLoading}
          title={t('button.login')}
          testID="submit-button"
          noMargin
        />

        <StyledRowRegister>
          <StyledText>{t('text.screenLogin.doNotHaveAnAccount?')}</StyledText>
          <StyledLink
...
