...
          'icon-tab-home',
        )}
        {renderTab(
          'attach-money',
          t('bottomTab.financial'),
          'FinancialProducerStack',
          'icon-tab-financial',
        )}
        {renderTab(
          'person',
          t('bottomTab.profile'),
          'ProfileProducer',
          'icon-tab-profile',
...
