...
    </StyledContainerLargeButton>
  );

  return (
    <StyledContainer
      showsVerticalScrollIndicator={false}
      testID="home-producer-screen">
      <Header />
      <StyledTitle>{t('text.screenHomeProducer.titleSectionOne')}</StyledTitle>
      <StyledContainerAboutMyBasket>
        <StyledTitleAboutMyBasket>
          {t('text.screenHomeProducer.note')}
        </StyledTitleAboutMyBasket>

        <ButtonAboutMyBasket
          title={t('button.myBaskets')}
          testID="my-basket-button"
          onPress={() => navigate('HomeMyBasketsProducer')}
        />
      </StyledContainerAboutMyBasket>

      <StyledTitle>{t('text.screenHomeProducer.titleSectionTwo')}</StyledTitle>
      {renderLargeButton(t('button.myEarnings'))}
...
