...

            <Counter name={name} control={control} />
            {error && <StyledError>{error}</StyledError>}

            <StyledContainerButtons>
              <StyledCancelButton
                testID="cancel-button"
                buttonColor="text_only"
                textColor="primary"
                size="small"
                title={t('button.cancel')}
                onPress={onCancel}
              />

              <StyledConfirmButton
                testID="confirm-button"
                size="small"
                title={t('button.confirm')}
                onPress={onConfirm}
              />
            </StyledContainerButtons>
          </StyledContent>
...
