...
        testID={`counter-${name}`}
        value={String(counter)}
        editable={false}
      />
      <StyledButton>
        <Icon
          testID="increment-button"
          name="plus"
          color={theme.colors.GRAY_900}
          size={14}
          onPress={() => {
            if (maxQuantity) {
              const newCounter =
...
