...
        {t('text.screenConfirmRegister.registrationSuccessfully')}
      </StyledTitle>
      <StyledSubtitle>
        {t('text.screenConfirmRegister.validateYourRegistration')}
      </StyledSubtitle>
      <StyledConfirmButton
        testID="confirm-button"
        title={t('button.start')}
        onPress={() =>
          navigate('Onboarding', {
            phoneOrEmail: route.params.phoneOrEmail,
            password: route.params.password,
          })
...
